[package]
name = "bytie"
version = "0.1.0"
authors = ["Armin Widegreen <bytie@widegreen.net>"]
edition = "2018"
license = "BSD-3-Clause"
homepage = "https://github.com/awidegreen/bytie"
description = """bytie allows to add, delete, replace and cut bytes of an input 
byte stream or from a file from command line."""

[dependencies]
clap = { version = "4", features = [ "derive" ] } 
failure = "0.1"
log = "0.4"
env_logger = "0.7"
tempfile = "3.1"
atty = "0.2"
regex = "1"
lazy_static = "1.4.0"
anyhow = "1.0.79"
bytesize = "1.3.0"

[dev-dependencies]
rand = "0.7"
